ukui-settings-daemon (3.1.0) v101; urgency=medium

  * BUG号：77572 高 一般【专项测试】【USD】控制面板显示器中对缩放进行设置后注销，注销后设置不生效，设置恢复为默认100%
           77722 【控制面板】键盘设置中将速度设置为最慢或最快（此时重复按键为最慢或最快），重启后重复速度设置依然为最慢/最快但是实际上变为默认速度值
           77568 【专项测试】【USD】插入外显后在控制面板显示器中进行分辨率设置后拔下外显，重启后插入外显默认设置为"第一屏"，且之后每次插拔外显示或重启默认都显示为"第一屏"
           68953 【控制面板】同时开启插入鼠标禁用触摸板、打字时禁用触摸板时，插入鼠标再拔出，此时打字时禁用触摸板功能失效（按钮依然是打开状态），重新关开功能恢复正常
           68941 【控制面板】开启打字时禁用触摸板，键盘输入停止后立刻使用触摸板，此时触摸板不会恢复使用，抬起后再次使用触摸板正常（如果键盘停止输入后等待一会再使用触摸板则正常）
           68767 【控制面板】键盘设置中将重复延迟设置为最长，此时按键重复下一个字母时间为最长，重启后按键重复下一个字母的时间实际变为较长（比最长时间短），但是控制面板中设置依然为最长
           68764 【控制面板】键盘设置中关闭按键重复后重启，重启后此功能按钮是关闭的但是实际上按键会重复，再次开关后按键不会重复
           78783 【设置】【设备】自定义快捷键失效，无法打开相对应的应用
           79701 【OSD】调整系统字体大小，系统投屏字体无变化
           78894【网络】将系统的缩放率调整到125%，注销重新登录后点击任务栏网络图标，网络界面向左上偏离  
           81186 【显示】切换缩放比例然后注销重新登录之后，开始菜单出现在任务栏上方 
           81183 【显示】控制面板-显示器，缩放屏幕无论选择125%,150%都不生效 
   *需求号：50662 50712 50700 50702 50703 50690
   *其他改动说明：移入patch支持gtk程序缩放 ,kds支持保存到文件。


 -- sundagao <sundagao@kylinos.cn>  Wed, 15 Sep 2021 10:06:26 +0800

ukui-settings-daemon (3.0.0) v101; urgency=medium

  * BUG号: 77138 【专项测试】【USD】大小写、数字键设置开启/关闭后重启，重启后无法记住重启前设
                   77136 【专项测试】【USD】【控制面板】控制面板中鼠标、键盘、触摸板等相关设置不生效
  * 需求号: 无
  * 其他改动说明:
    融合了osd的基本功能,增加kds工程，快捷键和热键已合入keyboard和meida-keys组件

 -- sundagao <sundagao@kylinos.cn>  Mon, 30 Aug 2021 14:42:09 +0800

ukui-settings-daemon (1.2.1-6.83) v101; urgency=medium

  * BUG号: 72007 搜索打开过慢
  * 需求号: 无
  * 其他改动说明: 无
    - debian/patches/Fix-ukui-search-opens-too-slowly.patch

 -- shangxiaoyang <shangxiaoyang@kylinos.cn>  Wed, 18 Aug 2021 13:54:36 +0800

ukui-settings-daemon (1.2.1-6.82) v101; urgency=medium

  * BUG号: #68953 #68941 #68905 #68767 #68764
  * 需求号: 无
  * 其他改动说明: 无
    - debian/patches/Fix-some-issues-with-touchpad-and-keyboard.patch

 -- shangxiaoyang <shangxiaoyang@kylinos.cn>  Tue, 27 Jul 2021 17:13:30 +0800

ukui-settings-daemon (1.2.1-6.81) v101; urgency=medium

  * BUG号: 67196