@@ -32,7 +32,7 @@
 #include <QDBusConnection>
 #include <QDBusMessage>
 #include <QDBusInterface>
-#include <QGSettings>
+#include <QGSettings/qgsettings.h>
 
 namespace Ui {
 class DeviceWindow;
