@@ -36,6 +36,9 @@ const int VOLUMESTEP = 6;
 #define POINTER_SCHEMA      "org.ukui.SettingsDaemon.plugins.mouse"
 #define POINTER_KEY         "locate-pointer"
 
+#define POWER_SCHEMA        "org.ukui.power-manager"
+#define POWER_BUTTON_KEY    "button-power"
+
 #define SESSION_SCHEMA      "org.ukui.session"
 #define SESSION_WIN_KEY     "win-key-release"
 
@@ -44,6 +47,13 @@ const int VOLUMESTEP = 6;
 
 #define PANEL_QUICK_OPERATION "org.ukui.quick-operation.panel"
 #define PANEL_SOUND_STATE   "soundstate"
+
+typedef enum {
+    POWER_SUSPEND = 1,
+    POWER_SHUTDOWN = 2,
+    POWER_HIBERNATE = 3,
+    POWER_INTER_ACTIVE = 4
+} PowerButton;
 
 MediaKeysManager::MediaKeysManager(QObject* parent):QObject(parent)
 {
@@ -104,6 +114,7 @@ bool MediaKeysManager::mediaKeysStart(GError*)
                 shotSettings->set(SHOT_RUN_KEY, false);
         }
 
+    powerSettings = new QGSettings(POWER_SCHEMA);
 
     mVolumeWindow = new VolumeWindow();
     mDeviceWindow = new DeviceWindow();
@@ -453,6 +464,41 @@ void MediaKeysManager::initShortcuts()
     KGlobalAccel::self()->setShortcut(logout1, QList<QKeySequence>{Qt::CTRL + Qt::ALT + Qt::Key_Period });
     connect(logout1, &QAction::triggered, this, [this]() {
         doAction(LOGOUT_KEY);
+    });
+
+    QAction *logout2 = new QAction(this);
+    logout2->setObjectName(QStringLiteral("open shutdown interface"));
+    logout2->setProperty("componentName", QStringLiteral(UKUI_DAEMON_NAME));
+    KGlobalAccel::self()->setDefaultShortcut(logout2, QList<QKeySequence>{Qt::Key_PowerOff});
+    KGlobalAccel::self()->setShortcut(logout2, QList<QKeySequence>{Qt::Key_PowerOff});
+    connect(logout2, &QAction::triggered, this, [this]() {
+        static QTime startTime = QTime::currentTime();
+        static int elapsed = -1;
+
+        elapsed = startTime.msecsTo(QTime::currentTime());
+        if(elapsed >= 0 && elapsed <= 6500){
+            return;
+        }
+        startTime = QTime::currentTime();
+
+        power_state = powerSettings->getEnum(POWER_BUTTON_KEY);
+        switch (power_state) {
+            case POWER_HIBERNATE:
+                executeCommand("ukui-session-tools"," --hibernate");
+
+            break;
+            case POWER_INTER_ACTIVE:
+                doAction(LOGOUT_KEY);
+            break;
+            case POWER_SHUTDOWN:
+//                doAction(POWER_KEY);
+                executeCommand("ukui-session-tools"," --shutdown");
+            break;
+            case POWER_SUSPEND:
+                executeCommand("ukui-session-tools"," --suspend");
+
+            break;
+        }
     });
 
     /*terminal*/
